rename method LibAdapterTestSolution.TestClass WriteLine Write
add argument LibAdapterTestSolution.TestClass Write bool,string,LibAdapterTestSolution.TestClass
rename type LibAdapterTestSolution.TestClass NewObject
rename type LibAdapterTestSolution.ITestInterface INewInterface